CHANGES IN VERSION 1.9.3
------------------------
 o update fortify.jplace to support number of placement (nplace) <2017-07-27, Thu>

CHANGES IN VERSION 1.9.2
------------------------
 o add bg_line and height parameter in msaplot <2017-07-26, Wed>
   + use can set bg_line = FALSE and height = 1 to plot more beautiful alignment
 o extend parameter in geom_cladebar <2017-07-26, Wed>
   + https://github.com/GuangchuangYu/ggtree/issues/142#issuecomment-317817995
 o scaleClade works after calling viewClade <2017-07-20, Thu>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!topic/bioc-ggtree/QVSryszPaFY
 o gheatmap support handling collapsed tree <2017-06-29, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/137

CHANGES IN VERSION 1.9.1
------------------------
 o now mapping parameter will passed to segment layer in geom_tiplab(align=T) <2017-06-19, Mon>
 o geom_cladelabel support `angle="auto"` for circular layout tree <2017-05-05, Fri>

CHANGES IN VERSION 1.8.0
------------------------
 o BioC 3.5 release <2017-04-26, Wed>

CHANGES IN VERSION 1.7.11
------------------------
 o remove layout.method parameter <2017-04-20, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/118#issuecomment-295130818
   + https://github.com/GuangchuangYu/ggtree/issues/125

CHANGES IN VERSION 1.7.10
------------------------
 o add message for subview, inset, phylopic, theme_transparent and theme_inset <2017-03-23, Thu>
   + will be defunct in version >= 1.9.0
   + user should use ggimage package to annotate tree with graphic object or image file
 o update subview to support mainview produced by `ggplot() + layers` <2017-03-13, Mon>

CHANGES IN VERSION 1.7.9
------------------------
 o fixed geom_range to support height_0.95_HPD <2017-03-03, Fri>
 o fixed geom_tiplab(geom='label') <2017-03-02, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/115

CHANGES IN VERSION 1.7.8
------------------------