@@ -4,9 +4,10 @@
 \alias{geom_text2}
 \title{geom_text2}
 \usage{
-geom_text2(mapping = NULL, data = NULL, ..., position = "identity",
-  family = "sans", parse = FALSE, na.rm = TRUE, show.legend = NA,
-  inherit.aes = TRUE, nudge_x = 0, nudge_y = 0, check_overlap = FALSE)
+geom_text2(mapping = NULL, data = NULL, ..., stat = "identity",
+  position = "identity", family = "sans", parse = FALSE, na.rm = TRUE,
+  show.legend = NA, inherit.aes = TRUE, nudge_x = 0, nudge_y = 0,
+  check_overlap = FALSE)
 }
 \arguments{
 \item{mapping}{the aesthetic mapping}
@@ -15,6 +16,8 @@ geom_text2(mapping = NULL, data = NULL, ..., position = "identity",
 only needed if you want to override he plot defaults.}
 
 \item{...}{other arguments passed on to 'layer'}
+
+\item{stat}{Name of stat to modify data}
 
 \item{position}{The position adjustment to use for overlapping points on this layer}
 
