@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.9.3
 ------------------------
+ o now geom_text2, geom_label2, geom_point2 and geom_segment2 work with ggplot2 <2017-08-01, Tue>
  o update fortify.jplace to support number of placement (nplace) <2017-07-27, Thu>
 
 CHANGES IN VERSION 1.9.2
